--- a/3-4-3.css
+++ b/3-4-3.css
@@ -1,51 +1,66 @@
-
+#GK-prime{
+    position: absolute;
+    left: 1%;
+    top: 41%;
+    transition: 2s;
+}
 #CBL-prime{
     position: absolute;
     left: 12%;
     top: 41%;
+    transition: 2s;
 }
 #CBR-prime{
     position: absolute;
     left: 14%;
     top: 65%;
+    transition: 2s;
 }
 #LB-prime{
     position: absolute;
     left: 14%;
     top: 17%;
+    transition: 2s;
 }
 #RB-prime{
     position: absolute;
     left: 35%;
     top: 81%;
+    transition: 2s;
 }
 #DM-prime{
     position: absolute;
     left: 30%;
     top: 29%;
+    transition: 2s;
 }
 #CML-prime{
     position: absolute;
     left: 35%;
-    top: 2%;
+    top: 2%;   
+    transition: 2s;
 }
 #CMR-prime{
     position: absolute;
     left: 30%;
     top: 55%;
+    transition: 2s;
 }
 #LW-prime{
     position: absolute;
     left: 56%;
     top: 77%;
+    transition: 2s;
 }
 #RW-prime{
     position: absolute;
     left: 56%;
     top: 7%;
+    transition: 2s;
 }
 #ST-prime{
     position: absolute;
-    left: 65%;
+    left: 70%;
     top: 42%;
+    transition: 2s;
 }
