--- a/EA-FC-25.css
+++ b/EA-FC-25.css
@@ -8,13 +8,13 @@ body {
     background-color: #333;
     overflow: hidden;
 }
-.A{
+.allstade{
     display: flex;
     flex-direction: row;
-    gap: 7vw;
+    gap: 2vw;
 }
-.B{
-    width: 12%;
+.allscrol{
+    width: 15%;
 }
 .stadium {
     position: relative;
@@ -97,31 +97,35 @@ section:hover{
 }
 
 .kart{
-    border-radius: 3vh;
-    width: 80%;
-    height: 7.7vw;
+    border-radius: 4vh;
+    width: 120%;
+    height: 8vw;
     background-color: rgb(255, 0, 0);
-    margin-top: 0.5vw;
-    margin-left: 0.7vw;
     cursor: pointer;
     background:linear-gradient(45deg ,#EBFF08,#0ae880,#0DF3FF,#EBFF08);
     background-size: 300% 300%;
     animation: color 6s ease-in-out infinite;
     transition: 0.5s;
-    
+    margin: 2vh 1.5vh 1vh 1vh;
 }
+#space{
+  width: 2.5vw;
+}
+
 .kart:hover{
     box-shadow: 0.3vw 0.3vw  0.5vw #0DF3FF;
     transition: 0.5s;
 }
 .kartscroll{
     border:0.3vh solid rgba(60, 0, 255, 0.7);
-    width: 80%;
-    height: 40vw;
-    margin: 2vh 5vh 3vh 0vh;
+    width: 120%;
+    height: 41vw;
+    margin-top: 1vh;
     background-color: #4CAF50;
     overflow-y: scroll;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: row;
 }
 img{
     position: relative;
@@ -152,21 +156,61 @@ p{
   }
 }
 
+#ajout{
+  padding: 1vw;
+  font-size: 1vw;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  transition: 0.5s;
+  background: #1e1e1e;
+  cursor: pointer;
+  color: greenyellow;
+  box-shadow: 0 0 10px #363636, inset 0 0 10px #363636;
+}
 
-button {
+#ajout:hover {
+  animation: a 0.5s 1 linear;
+}
+
+@keyframes a {
+  0% {
+    transform: scale(0.7, 1.3);
+  }
+
+  25% {
+    transform: scale(1.3, 0.7);
+  }
+
+  50% {
+    transform: scale(0.7, 1.3);
+  }
+
+  75% {
+    transform: scale(1.3, 0.7);
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+
+
+#changeFormation {
     transform: rotate(-25deg) skew(25deg);
     transform-style: preserve-3d;
     position: relative;
     list-style: none;
-    width: 100px;
-    height: 32px;
+    width: 35%;
+    height: 2vw;
     border: none;
     background: transparent;
     font-family: inherit;
     cursor: pointer;
-    margin: 2vh 0vh 0vh 2vh;
+    margin: 2vw 0vw 0vw 5vw;
   }
-  button:before {
+  #changeFormation:before {
     content: '';
     position: absolute;
     bottom: -10px;
@@ -176,7 +220,7 @@ button {
     background: #2a2a2a;
     transform: skewX(-41deg);
   }
-  button:after {
+  #changeFormation:after {
     content: '';
     position: absolute;
     top: 5px;
@@ -186,7 +230,7 @@ button {
     background: #2a2a2a;
     transform: skewY(-49deg);
   }
-  button span {
+  #changeFormation span {
     position: absolute;
     top: 0;
     left: 0;
@@ -197,52 +241,52 @@ button {
     font-size: 25px;
     transition: 1.1s ease-out;
   }
-  button:hover span {
+  #changeFormation:hover span {
     z-index: 1000;
     transition: .3s;
     color: #4CAF50;
   }
-  button:hover span:nth-child(5) {
+  #changeFormation:hover span:nth-child(5) {
     transform: translate(40px, -40px);
     opacity: 1;
   }
-  button:hover span:nth-child(4) {
+  #changeFormation:hover span:nth-child(4) {
     transform: translate(30px, -30px);
     background-color: #4CAF50;
     opacity: .8;
   }
-  button:hover span:nth-child(3) {
+  #changeFormation:hover span:nth-child(3) {
     transform: translate(20px, -20px);
     background-color: #4CAF50;
     opacity: .6;
   }
-  button:hover span:nth-child(2) {
+  #changeFormation:hover span:nth-child(2) {
     background-color: #4CAF50;
     transform: translate(10px, -10px);
     opacity: .4;
   }
-  button:hover span:nth-child(1) {
+  #changeFormation:hover span:nth-child(1) {
     background-color: #4CAF50;
     transform: translate(0px, 0px);
     opacity: .2;
   }
-  button:active span:nth-child(5) {
+  #changeFormation:active span:nth-child(5) {
     transform: translate(20px, -20px);
     opacity: 1;
   }
-  button:active span:nth-child(4) {
+  #changeFormation:active span:nth-child(4) {
     transform: translate(15px, -15px);
   }
-  button:active span:nth-child(3) {
+  #changeFormation:active span:nth-child(3) {
     transform: translate(10px, -10px);
   }
-  button:active span:nth-child(2) {
+  #changeFormation:active span:nth-child(2) {
     transform: translate(5px, -5px);
   }
-  button:active span:nth-child(1) {
+  #changeFormation:active span:nth-child(1) {
     transform: translate(0px, 0px);
   }
-  button:nth-child(1):hover span {
+  #changeFormation:nth-child(1):hover span {
     background: #52E19F;
   }
 
