--- a/EA-FC-25.css
+++ b/EA-FC-25.css
@@ -5,7 +5,7 @@
 }
 body {
     height: 100vh;
-    background-color: #333;
+    background-color: #070e2f;
     overflow: hidden;
 }
 .allstade{
@@ -116,8 +116,9 @@ section:hover{
     box-shadow: 0.3vw 0.3vw  0.5vw #0DF3FF;
     transition: 0.5s;
 }
+
 .kartscroll{
-    border:0.3vh solid rgba(60, 0, 255, 0.7);
+    border: #0DF3FF solid;
     width: 120%;
     height: 41vw;
     margin-top: 1vh;
@@ -163,7 +164,7 @@ p{
   border: none;
   border-radius: 10px;
   transition: 0.5s;
-  background: #1e1e1e;
+  background: #070e2f;
   cursor: pointer;
   color: greenyellow;
   box-shadow: 0 0 10px #363636, inset 0 0 10px #363636;
@@ -217,7 +218,7 @@ p{
     left: -5px;
     width: 100%;
     height: 10px;
-    background: #2a2a2a;
+    background: #243483;
     transform: skewX(-41deg);
   }
   #changeFormation:after {
@@ -227,7 +228,7 @@ p{
     left: -9px;
     width: 9px;
     height: 100%;
-    background: #2a2a2a;
+    background: #243483;
     transform: skewY(-49deg);
   }
   #changeFormation span {
@@ -236,38 +237,38 @@ p{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #2a2a2a;
-    color: #fff;
+    background: #243483;
+    color: greenyellow;
     font-size: 25px;
     transition: 1.1s ease-out;
   }
   #changeFormation:hover span {
     z-index: 1000;
     transition: .3s;
-    color: #4CAF50;
+    color: greenyellow;
   }
   #changeFormation:hover span:nth-child(5) {
-    transform: translate(40px, -40px);
+    transform: translate(4vh, -4vh);
     opacity: 1;
   }
   #changeFormation:hover span:nth-child(4) {
-    transform: translate(30px, -30px);
+    transform: translate(3vh, -3vh);
     background-color: #4CAF50;
     opacity: .8;
   }
   #changeFormation:hover span:nth-child(3) {
-    transform: translate(20px, -20px);
+    transform: translate(2vh, -2vh);
     background-color: #4CAF50;
     opacity: .6;
   }
   #changeFormation:hover span:nth-child(2) {
     background-color: #4CAF50;
-    transform: translate(10px, -10px);
+    transform: translate(1vh, -1vh);
     opacity: .4;
   }
   #changeFormation:hover span:nth-child(1) {
     background-color: #4CAF50;
-    transform: translate(0px, 0px);
+    transform: translate(0vh, 0vh);
     opacity: .2;
   }
   #changeFormation:active span:nth-child(5) {
