--- a/EA-FC-25.css
+++ b/EA-FC-25.css
@@ -1,163 +1,181 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 body {
-    height: 100vh;
-    background-color: #070e2f;
-    overflow: hidden;
+  height: 100vh;
+  background-color: #070e2f;
+  overflow: hidden;
 }
-.allstade{
-    display: flex;
-    flex-direction: row;
-    gap: 2vw;
+
+.allstade {
+  display: flex;
+  flex-direction: row;
+  gap: 2vw;
 }
-.allscrol{
-    width: 15%;
+
+.allscrol {
+  width: 15%;
 }
+
 .stadium {
-    position: relative;
-    width: 80%;
-    height: 47vw;
-    background-color: #4CAF50;
-    border: 4px solid #ffffff;
-    border-radius: 10px;
-    overflow: hidden;
+  position: relative;
+  width: 80%;
+  height: 47vw;
+  background-color: #4CAF50;
+  border: 4px solid #ffffff;
+  border-radius: 10px;
+  overflow: hidden;
 }
+
 .center-circle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 18%;
-    height: 30%;
-    border: 2px solid white;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 18%;
+  height: 30%;
+  border: 2px solid white;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
 }
-.mideline{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0.5px;
-    height: 800px;
-    border: 1px solid white;
-    transform: translate(-50%, -50%);
+
+.mideline {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0.5px;
+  height: 800px;
+  border: 1px solid white;
+  transform: translate(-50%, -50%);
 }
+
 .goal-area {
-    position: absolute;
-    width: 5%;
-    height: 25%;
-    border: 2px solid white;
-    background: transparent;
+  position: absolute;
+  width: 5%;
+  height: 25%;
+  border: 2px solid white;
+  background: transparent;
 }
+
 .goal-left {
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
 }
+
 .goal-right {
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
 }
+
 .goal-area1 {
-    position: absolute;
-    width: 8%;
-    height: 35%;
-    border: 2px solid white;
-    background: transparent;
+  position: absolute;
+  width: 8%;
+  height: 35%;
+  border: 2px solid white;
+  background: transparent;
 }
+
 .goal-left1 {
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
 }
+
 .goal-right1 {
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
 }
 
-section{
-    border-radius: 4vh;
-    height: 8vw;
-    width: 7%;
-    background-color: rgba(9, 185, 254, 0.5);
+section {
+  border-radius: 4vh;
+  height: 8vw;
+  width: 7%;
+  background-color: rgba(9, 185, 254, 0.5);
 
 }
 
-section:hover{
-    cursor: pointer;
-    box-shadow: 0.3vw 0.3vw  0.5vw #0DF3FF;
-    background:linear-gradient(45deg ,#09e37d,rgb(9, 254, 139),#0DF3FF,#EBFF08);
-    background-size: 300% 300%;
-    animation: color 1s ease-in-out infinite;
-    transition: 0.5s;
+section:hover {
+  cursor: pointer;
+  box-shadow: 0.3vw 0.3vw 0.5vw #0DF3FF;
+  background: linear-gradient(45deg, #279662, #e12828, #3347bb, #7f872d);
+  background-size: 300% 300%;
+  animation: color 1s ease-in-out infinite;
+  transition: 0.5s;
 }
 
-.kart{
-    border-radius: 4vh;
-    width: 120%;
-    height: 8vw;
-    background-color: rgb(255, 0, 0);
-    cursor: pointer;
-    background:linear-gradient(45deg ,#EBFF08,#0ae880,#0DF3FF,#EBFF08);
-    background-size: 300% 300%;
-    animation: color 6s ease-in-out infinite;
-    transition: 0.5s;
-    margin: 2vh 1.5vh 1vh 1vh;
+.kart {
+  border-radius: 4vh;
+  width: 120%;
+  height: 8vw;
+  background-color: rgb(255, 0, 0);
+  cursor: pointer;
+  background: linear-gradient(45deg, #279662, #e12828, #3347bb, #7f872d);
+  background-size: 300% 300%;
+  animation: color 6s ease-in-out infinite;
+  transition: 0.5s;
+  margin: 2vh 1.5vh 1vh 1vh;
 }
-#space{
+
+#space {
   width: 2.5vw;
 }
 
-.kart:hover{
-    box-shadow: 0.3vw 0.3vw  0.5vw #0DF3FF;
-    transition: 0.5s;
+.kart:hover {
+  box-shadow: 0.3vw 0.3vw 0.5vw #0DF3FF;
+  transition: 0.5s;
 }
 
-.kartscroll{
-    border: #0DF3FF solid;
-    width: 120%;
-    height: 41vw;
-    margin-top: 1vh;
-    background-color: #4CAF50;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: row;
-}
-img{
-    position: relative;
-    left:15%;
-    height: 5vw; 
-    width: 70%;
-}
-h1{
-    position: relative;
-    left: 12%;
-    font-size: 1.2vw;
-}
-p{
-    position: relative;
-    left: 17%;
-    font-size: 0.8vw;
+.kartscroll {
+  border: #0DF3FF solid;
+  width: 120%;
+  height: 41vw;
+  margin-top: 1vh;
+  background-color: #4CAF50;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: row;
 }
 
-@keyframes color{
-  0%{
-      background-position: 0 50%;
+img {
+  position: relative;
+  left: 15%;
+  height: 5vw;
+  width: 70%;
+}
+
+h1 {
+  position: relative;
+  left: 12%;
+  font-size: 1.2vw;
+}
+
+p {
+  position: relative;
+  left: 17%;
+  font-size: 0.8vw;
+}
+
+@keyframes color {
+  0% {
+    background-position: 0 50%;
   }
-  50%{
-      background-position: 100% 50%;
+
+  50% {
+    background-position: 100% 50%;
   }
-  100%{
-      background-position: 0% 50%;
+
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-#ajout{
+#ajout {
   padding: 0.7vw;
   font-size: 1vw;
   margin: 0.5vh 0vh 0vh 0.5vh;
@@ -198,138 +216,153 @@ p{
 
 
 #changeFormation {
-    transform: rotate(-25deg) skew(25deg);
-    transform-style: preserve-3d;
-    position: relative;
-    list-style: none;
-    width: 35%;
-    height: 2vw;
-    border: none;
-    background: transparent;
-    font-family: inherit;
-    cursor: pointer;
-    margin: 2vw 0vw 0vw 5vw;
-  }
-  #changeFormation:before {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: -5px;
-    width: 100%;
-    height: 10px;
-    background: #243483;
-    transform: skewX(-41deg);
-  }
-  #changeFormation:after {
-    content: '';
-    position: absolute;
-    top: 5px;
-    left: -9px;
-    width: 9px;
-    height: 100%;
-    background: #243483;
-    transform: skewY(-49deg);
-  }
-  #changeFormation span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #243483;
-    color: greenyellow;
-    font-size: 25px;
-    transition: 1.1s ease-out;
-  }
-  #changeFormation:hover span {
-    z-index: 1000;
-    transition: .3s;
-    color: greenyellow;
-  }
-  #changeFormation:hover span:nth-child(5) {
-    transform: translate(4vh, -4vh);
-    opacity: 1;
-  }
-  #changeFormation:hover span:nth-child(4) {
-    transform: translate(3vh, -3vh);
-    background-color: #4CAF50;
-    opacity: .8;
-  }
-  #changeFormation:hover span:nth-child(3) {
-    transform: translate(2vh, -2vh);
-    background-color: #4CAF50;
-    opacity: .6;
-  }
-  #changeFormation:hover span:nth-child(2) {
-    background-color: #4CAF50;
-    transform: translate(1vh, -1vh);
-    opacity: .4;
-  }
-  #changeFormation:hover span:nth-child(1) {
-    background-color: #4CAF50;
-    transform: translate(0vh, 0vh);
-    opacity: .2;
-  }
-  #changeFormation:active span:nth-child(5) {
-    transform: translate(20px, -20px);
-    opacity: 1;
-  }
-  #changeFormation:active span:nth-child(4) {
-    transform: translate(15px, -15px);
-  }
-  #changeFormation:active span:nth-child(3) {
-    transform: translate(10px, -10px);
-  }
-  #changeFormation:active span:nth-child(2) {
-    transform: translate(5px, -5px);
-  }
-  #changeFormation:active span:nth-child(1) {
-    transform: translate(0px, 0px);
-  }
-  #changeFormation:nth-child(1):hover span {
-    background: #52E19F;
-  }
+  transform: rotate(-25deg) skew(25deg);
+  transform-style: preserve-3d;
+  position: relative;
+  list-style: none;
+  width: 35%;
+  height: 4vh;
+  border: none;
+  background: transparent;
+  font-family: inherit;
+  cursor: pointer;
+  margin: 2vw 0vw 0vw 5vw;
+}
+
+#changeFormation:before {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: -5px;
+  width: 100%;
+  height: 10px;
+  background: #3347bb;
+  transform: skewX(-41deg);
+}
+
+#changeFormation:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: -9px;
+  width: 9px;
+  height: 100%;
+  background: #3347bb;
+  transform: skewY(-49deg);
+}
+
+#changeFormation span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #3347bb;
+  color: greenyellow;
+  font-size: 25px;
+  transition: 1.1s ease-out;
+}
+
+#changeFormation:hover span {
+  z-index: 1000;
+  transition: .3s;
+  color: greenyellow;
+}
+
+#changeFormation:hover span:nth-child(5) {
+  transform: translate(4vh, -4vh);
+  opacity: 1;
+}
+
+#changeFormation:hover span:nth-child(4) {
+  transform: translate(3vh, -3vh);
+  background-color: #4CAF50;
+  opacity: .8;
+}
+
+#changeFormation:hover span:nth-child(3) {
+  transform: translate(2vh, -2vh);
+  background-color: #4CAF50;
+  opacity: .6;
+}
+
+#changeFormation:hover span:nth-child(2) {
+  background-color: #4CAF50;
+  transform: translate(1vh, -1vh);
+  opacity: .4;
+}
+
+#changeFormation:hover span:nth-child(1) {
+  background-color: #4CAF50;
+  transform: translate(0vh, 0vh);
+  opacity: .2;
+}
+
+#changeFormation:active span:nth-child(5) {
+  transform: translate(20px, -20px);
+  opacity: 1;
+}
+
+#changeFormation:active span:nth-child(4) {
+  transform: translate(15px, -15px);
+}
+
+#changeFormation:active span:nth-child(3) {
+  transform: translate(10px, -10px);
+}
+
+#changeFormation:active span:nth-child(2) {
+  transform: translate(5px, -5px);
+}
+
+#changeFormation:active span:nth-child(1) {
+  transform: translate(0px, 0px);
+}
+
+#changeFormation:nth-child(1):hover span {
+  background: #52E19F;
+}
 
 
 
 
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 10vh;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-  }
-  
-  .modal-content {
-    border-radius: 1vh;
-    background-color: #0DF3FF;
-    margin: auto;
-    padding: 0.4vw;
-    border: 1px solid #888;
-    width: 40%;
-  }
-  
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    margin-left: 34vw;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 10vh;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  border-radius: 1vh;
+  background-color: #0DF3FF;
+  margin: auto;
+  padding: 0.4vw;
+  border: 1px solid #888;
+  width: 40%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin-left: 34vw;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 .form {
@@ -405,7 +438,8 @@ p{
 }
 
 
-.button-log:active, .button-confirm:active {
+.button-log:active,
+.button-confirm:active {
   box-shadow: 0px 0px var(--main-color);
   transform: translate(3px, 3px);
 }
