--- a/EA-FC-25.css
+++ b/EA-FC-25.css
@@ -46,7 +46,7 @@ body {
   top: 50%;
   left: 50%;
   width: 0.5px;
-  height: 800px;
+  height: 100vh;
   border: 1px solid white;
   transform: translate(-50%, -50%);
 }
